--- a/index.html
+++ b/index.html
@@ -1,181 +1,17 @@
-<!DOCTYPE HTML>
-
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>Dark Apotheosis - Home</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-	</head>
-	<body class="landing">
+<body>
 
-		<!-- Page Wrapper -->
-			<div id="page-wrapper">
+<video width="400" controls>
+  <source src="mov_bbb.mp4" type="video/mp4">
+  <source src="mov_bbb.ogg" type="video/ogg">
+  Your browser does not support HTML5 video.
+</video>
 
-				<!-- Header -->
-					<header id="header" class="alt">
-						<h1><a href="index.html">Dark Apotheosis</a></h1>
-						<nav id="nav">
-							<ul>
-								<li class="special">
-									<a href="#menu" class="menuToggle"><span>Menu</span></a>
-									<div id="menu">
-										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="discography.html">Discography</a></li>
-											<li><a href="members.html">Members</a></li>
-											<li><a href="">Tours</a></li>
-										</ul>
-									</div>
-								</li>
-							</ul>
-						</nav>
-					</header>
+<p>
+Video courtesy of
+<a href="http://www.bigbuckbunny.org/" target="_blank">Big Buck Bunny</a>.
+</p>
 
-				<!-- Banner -->
-					<section id="banner">
-						<div class="inner">
-							<h2>Dark Apotheosis</h2>
-							<p>jebo sebe</p>
-							<!--<ul class="actions">
-								<li><a href="#" class="button special">Activate</a></li>
-							</ul>-->
-						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
-					</section>
-
-
-				<!-- Sta mi radimo -->
-					<section id="one" class="wrapper style1 special">
-						<div class="inner">
-							<header class="major">
-								<h2>Vise o nama</h2>
-								<p>Mi silujemo decu</p>
-							</header>
-							<!--<ul class="icons major">
-								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
-							</ul>-->
-						</div>
-					</section>
-
-				<!-- Albumi -->
-					<section id="two" class="wrapper alt style2">
-						<section class="spotlight">
-							<div class="image"><img src="images/Fleshgod Apocalypse Agony.jpg" alt="" /></div><div class="content">
-								<h2>Agony</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-								<ul class="actions vertical">
-									<li><a href="#" class="button fit">Explore</a></li>
-								</ul>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/Fleshgod Apocalypse Labyrinth.jpg" alt="" /></div><div class="content">
-								<h2>Labyrinth</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-								<ul class="actions vertical">
-									<li><a href="#" class="button fit">Explore</a></li>
-								</ul>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/Fleshgod Apocalypse King.jpg" alt="" /></div><div class="content">
-								<h2>King</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-								<ul class="actions vertical">
-									<li><a href="#" class="button fit">Explore</a></li>
-								</ul>
-							</div>
-						</section>
-					</section>
-
-
-				<!-- New Album -->
-				<section id="banner">
-					<div class="inner">
-						<h2>Dark Apotheosis</h2>
-						<p>jebo sebe</p>
-					</div>
-					<a href="#one" class="more scrolly">Learn More</a>
-				</section>
-
-				<!-- Deca u bendu -->
-					<!--<section id="three" class="wrapper style3 special">
-						<div class="">
-							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
-							</header>
-							<ul class="features">
-								<li class="icon fa-paper-plane-o">
-									<h3>Pevac</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-laptop">
-									<h3>Lead Gitarista</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-code">
-									<h3>Ritam Gitarista</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-headphones">
-									<h3>Bubnjar</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-heart-o">
-									<h3>Basista</h3>
-									<p>Dobar</p>
-								</li>
-							</ul>
-						</div>
-					</section>-->
-
-				<!-- CTA -->
-					<section id="cta" class="wrapper style4">
-						<div class="inner">
-							<header>
-								<h3>Dear Metal Blade Records</h3>
-								<p>pustite nas da vam silujemo decu, duboko u supak, sa oklagijom</p>
-							</header>
-							<ul class="actions vertical">
-								<li><a href="#" class="button fit special">Prihvatamo</a></li>
-								<li><a href="#" class="button fit">Odjebite</a></li>
-							</ul>
-						</div>
-					</section>
-
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<!--<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>-->
-							<li><a href="#" class="icon fa-youtube-play"><span class="label">Youtube</span></a></li>
-							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; Dark Apotheosis</li><li>Design: <a href="https://www.facebook.com/andrej.srecko.3">Srijecko</a></li>
-						</ul>
-					</footer>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
-
-	</body>
+</body>
 </html>
