--- a/index.html
+++ b/index.html
@@ -1,13 +1,166 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE HTML>
+<!--
+	Spectral by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-<body>
+	<head>
+		<title>Dark Apotheosis - Home</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<script src="assets/js/ism-2.2.min.js"></script>
+		<script src="https://use.fontawesome.com/f8aa86b9be.js"></script>
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 
-<iframe width="1120" height="630" src="https://www.youtube.com/embed/ezw6yszTA5Q" frameborder="0" allowfullscreen></iframe>
+    <!--  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+      <script src="assets/js/stellar.js-master/jquery.stellar.js"></script>
 
-<p>
-Band: Dark Apotheosis</br>
-Song: Rocks And Boulders
-</p>
+			<script src="js/jquery-1.11.3.min.js" type="text/javascript"></script>
+	    <script src="js/jssor.slider-22.1.6.mini.js" type="text/javascript"></script>
+	    <script type="text/javascript"></script>-->
 
-</body>
+
+        <script>
+
+            $(document).ready(function () {
+                $(window).stellar();
+            });
+
+        </script>
+
+	</head>
+	<body class="landing">
+
+		<!-- Page Wrapper -->
+			<div id="page-wrapper">
+
+				<!-- Header -->
+					<header id="header" class="alt">
+						<h1><a href="index.html">Dark Apotheosis</a></h1>
+						<nav id="nav">
+							<ul>
+								<li class="special">
+									<a href="#menu" class="menuToggle"><span style="font-size: 220%">Menu</span></a>
+									<div id="menu">
+										<ul>
+											<li><a href="index.html">Home</a></li>
+											<li><a href="about.html">About</a></li>
+											<li><a href="discography.html">Discography</a></li>
+											<li><a href="Lyrics.html">Lyrics</a></li>
+											<li><a href="">Tours</a></li>
+										</ul>
+									</div>
+								</li>
+							</ul>
+						</nav>
+					</header>
+
+				<!-- PRVA_SLIKA -->
+					<section id="banner">
+						<div class="row uniform">
+						</div>
+					</section>
+
+
+				<!-- SOCIAL MEDIA -->
+				<section id="one" class="wrapper styleDARK special">
+					<div class="inner">
+						<header class="major">
+							<h1>Dark Apotheosis terror over social media</h1>
+
+							<ul class="icons fontSize_2em">
+								<li><a href="https://www.facebook.com/darkapotheosisofficial/" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.instagram.com/darkapotheosisofficial/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://www.youtube.com/channel/UCpODFg2X7LUSPaLoPZ9VE1w" target="_blank" class="icon fa-youtube-play"><span class="label">Youtube</span></a></li>
+								<li><a href="https://darkapotheosis.bandcamp.com/releases" target="_blank" class="icon fa-bandcamp"><span class="label">Bandcamp</span></a></li>
+								<li><a href="#" target="_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							</ul>
+
+						</header>
+					</div>
+				</section>
+
+				<!--Albumi-->
+				<section id="asda" class="wrapper stylePOZADINASLIKA Pad_6_0_6_0">
+						<div class="inner spotlight wrapper styleDARK HATEcapacitor_DIV">
+
+								<div class="content image fit">
+										<h1 style="text-align: center;">Dark Apotheosis latest release:</h1>
+										<img src="images/Hate Capacitor Cover.png" alt="" />
+								</div>
+								<div class="content">
+									<h2>Hate Capacitor</h2>
+									<div class="row uniform">
+
+										<div class="6u 12u$(medium)">
+											<p>01. Intro - Pure Hate</br>
+												 02. Rocks And Boulders</br>
+												 03. F.I.T.E.A.D.</br>
+												 04. Fist in the Face</br>
+												 05. Maximum Hate Capacity</p>
+										</div>
+										<div class="6u 12u$(medium)">
+											<ul class="actions vertical">
+													<li><a href="#jebo" class="scrolly button fit">Explore</a></li>
+													<li><a href="download/Dark Apotheosis - Hate Capacitor DEMO (2017).rar" class="scrolly button fit">Download</a></li>
+											</ul>
+										</div>
+									</div>
+								</div>
+						 </div>
+				</section>
+
+				<!--FINI KOMENTAR-->
+				<section id="one" class="wrapper styleDARK special">
+					<div class="inner">
+						<header class="major">
+							<h1>"Dark Apotheosis enspire us!" - Metallica</h1>
+						</header>
+					</div>
+				</section>
+
+				<!-- CTA -->
+					<section id="cta" class="wrapper style4">
+						<div class="inner">
+							<header>
+								<h1>Dear Metal Blade Records</h1>
+								<p>pustite nas da vam silujemo decu, duboko u supak, sa oklagijom</p>
+							</header>
+							<ul class="actions vertical">
+								<li><a href="#" class="button fit special">Prihvatamo</a></li>
+								<li><a href="#" class="button fit">Odjebite</a></li>
+							</ul>
+						</div>
+					</section>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<ul class="icons">
+							<li><a href="https://www.facebook.com/darkapotheosisofficial/" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.instagram.com/darkapotheosisofficial/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://www.youtube.com/channel/UCpODFg2X7LUSPaLoPZ9VE1w" target="_blank" class="icon fa-youtube-play"><span class="label">Youtube</span></a></li>
+							<li><a href="https://darkapotheosis.bandcamp.com/releases" target="_blank" class="icon fa-bandcamp"><span class="label">Bandcamp</span></a></li>
+							<li><a href="#" target="_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						</ul>
+						<ul class="copyright">
+							<li>&copy; Dark Apotheosis</li><li>Design: Killing Machine<a href=http://html5up.net>...</a></li>
+						</ul>
+					</footer>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
